@@ -1,3 +1,7 @@
+2020-08-30  Robby Stephenson  <robby@periapsis.org>
+
+	* Updated ISBNdb to API v2.
+
 2020-08-22  Robby Stephenson  <robby@periapsis.org>
 
 	* Updated DBC Open Search data source.
